# rerun-operator

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/rerun-operator/: Cargo.toml
crates/rerun-operator-api/: Cargo.toml
crates/rerun-operator-api/src/: v1alpha1.rs
crates/rerun-operator/src/: blueprint.rs  main.rs  reconciler.rs  resources.rs
nix/: kubenix-module.nix
