[workspace]
resolver = "2"
members = [
    "crates/rerun-operator",
    "crates/rerun-operator-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/casazza-info/rerun-operator"

[workspace.dependencies]
rerun-operator-api = { path = "crates/rerun-operator-api" }

# Shared scaffolding from the hephaestus workspace.
# Flip to a git ref after hephaestus-operator-lib is published to main:
#   hephaestus-operator-lib = { git = "https://github.com/casazza-info/hephaestus", branch = "main" }
hephaestus-operator-lib = { path = "../hephaestus/crates/hephaestus-operator-lib" }

kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32", "schemars"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
futures = "0.3"
anyhow = "1"
prometheus = "0.13"
axum = "0.7"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
