[package]
name = "rerun-operator-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RerunDashboard CRD types for the rerun-operator"

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
